--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿7<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">P1-Ap1-LohammyVasquez</a>
+        <a class="navbar-brand" href="">P1_Ap1_LohammyVasquez</a>
     </div>
 </div>
 
@@ -15,8 +15,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="/EntradaHuacales/Index">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Huacales
             </NavLink>
         </div>
 
