se globalizo el modelo y el servicio

--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using P1_Ap1_LohammyVasquez
 @using P1_Ap1_LohammyVasquez.Components
+@using P1_Ap1_LohammyVasquez.Models
+@using P1_Ap1_LohammyVasquez.Services
