--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -2,6 +2,9 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Lohammy Vasquez</h1>
 
-Welcome to your new app.
+<h2>2023-0744</h2>
+
+<h4>Huacales</h4>
+
